--- a/index.css
+++ b/index.css
@@ -441,27 +441,26 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .work__box {
-    display: flex;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: var(--gutter-medium);
 }
 
-@media(max-width: 900px) {
-    .work__box {
-        align-items: initial;
-        flex-direction: column-reverse;
-    }
-}
+@media (min-width: 768px) {
+  .work__box {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 
-.work__box:not(:last-child) {
-    margin-bottom: 25rem;
-}
+  .work__text {
+    flex: 0 0 50%;
+    padding-right: var(--gutter-normal);
+  }
 
-@media(max-width: 500px) {
-    .work__box:not(:last-child) {
-        margin-bottom: 20rem;
-    }
+  .work__image-box {
+    flex: 0 0 50%;
+  }
 }
-
 .work__links {
     display: flex;
     align-items: center;
