--- a/index.css
+++ b/index.css
@@ -79,11 +79,12 @@ body {
 .row {
     max-width: var(--container-max-width);
     margin: 0 auto;
+    padding: 0 var(--gutter-normal);
 }
 
 @media(max-width: 1340px) {
     .row {
-        max-width: 1100px;
+        max-width: 2000px; /* Increased from 1100px */
     }
 }
 
@@ -178,8 +179,8 @@ p {
 }
 
 @media(max-width: 900px) {
-    p { 
-        max-width: var(--container-max-width);
+    p {
+        max-width: 100%; /* Changed from var(--container-small-width) */
     }
 }
 
@@ -468,8 +469,16 @@ body:not(.user-is-tabbing) a:focus {
 }
 
 .work__text {
-    flex: 0 0 30%;
+    flex: 0 0 50%; /* Changed from 30% */
 }
+
+@media(min-width: 901px) {
+    .work__image-box {
+        flex: 1;
+        margin: 0 0 0 5rem; /* Reduced from 10rem */
+    }
+}
+
 
 .work__list {
     /* list-style-type: square; */
